# electrodevice-control

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp  main.qml
server/: CMakeLists.txt  channelstate.hpp  command.cpp  command.hpp  main.cpp  server.cpp  server.hpp
